@@ -13,6 +13,7 @@
 - compat-29: Add ~list-of-strings-p~.
 - compat-29: Add ~delete-line~.
 - compat-29: Add ~with-narrowing~.
+- compat-29: Add ~buffer-local-set-state~ and ~buffer-local-restore-state~.
 
 * Release of "Compat" Version 29.1.2.0
 
